--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -27,6 +27,9 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Login to ACR
+        run: |
+          az acr login --name petspotr
       - name: Build and Push Backend
         uses: docker/build-push-action@v2
         with:
