--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'src/**'
+      - 'iac/**'
       - '.github/workflows/infrastructure.yaml'
   workflow_dispatch:
 
