Set minimum scale to 1

--- a/iac/keda/scaler-servicebus.yaml
+++ b/iac/keda/scaler-servicebus.yaml
@@ -8,6 +8,7 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: backend
+  minReplicaCount: 1
   triggers:
   - type: azure-servicebus
     metadata:
