--- a/.github/workflows/infrastructure.yaml
+++ b/.github/workflows/infrastructure.yaml
@@ -73,3 +73,25 @@ jobs:
       - name: Deploy KEDA scalers
         run: |
           kubectl apply -f iac/keda/scaler-servicebus.yaml
+  dapr:
+    name: Install Dapr components
+    runs-on: ubuntu-latest
+    needs: helm
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Get AKS Credentials
+        run: |
+          az aks get-credentials \
+            --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --name petspotr
+      - name: Deploy Dapr components
+        run: |
+          kubectl apply -f iac/dapr/images.yaml
+          kubectl apply -f iac/dapr/pubsub.yaml
+          kubectl apply -f iac/dapr/pets.yaml
