--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -129,8 +129,8 @@ jobs:
             ${{ env.REGISTRY_ADDRESS }}/frontend:latest
           file: src/frontend/Dockerfile
           context: src/frontend
-  secrets:
-    name: Deploy secrets
+  config:
+    name: Deploy configuration and secrets
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -145,14 +145,14 @@ jobs:
           az deployment group create \
             --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-            --template-file iac/secrets.bicep \
+            --template-file iac/config.bicep \
             --parameters serviceBusAuthorizationRuleName=petspotr/Dapr storageAccountName=petspotr cosmosAccountName=petspotr clusterName=petspotr
   app:
     name: Deploy PetSpotR application
     runs-on: ubuntu-latest
     needs:
       - containers
-      - secrets
+      - config
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
