--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -146,7 +146,7 @@ jobs:
             --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --template-file iac/config.bicep \
-            --parameters serviceBusNamespaceName=petspot serviceBusAuthorizationRuleName=Dapr storageAccountName=petspotr cosmosAccountName=petspotr clusterName=petspotr
+            --parameters storageAccountName=petspotr cosmosAccountName=petspotr clusterName=petspotr
   app:
     name: Deploy PetSpotR application
     runs-on: ubuntu-latest
@@ -166,4 +166,4 @@ jobs:
             --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --template-file iac/app.bicep \
-            --parameters registryName=petspotr clusterName=petspotr
+            --parameters registryName=petspotr clusterName=petspotr serviceBusAuthRuleName=petspotr/Dapr
