Make dapr a prereq to deploy application

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -153,6 +153,7 @@ jobs:
     needs:
       - containers
       - config
+      - dapr
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
