Fix secret names and keys

--- a/iac/dapr/images.yaml
+++ b/iac/dapr/images.yaml
@@ -12,7 +12,7 @@ spec:
     value: images
   - name: accountKey
     secretKeyRef:
-      key: storage
-      name: accountKey
+      name: storage
+      key: accountKey
   - name: decodeBase64
     value: true
