--- a/iac/dapr/pubsub.yaml
+++ b/iac/dapr/pubsub.yaml
@@ -8,6 +8,5 @@ spec:
   metadata:
   - name: connectionString
     secretKeyRef:
-      key: servicebus
-      name: connectionString
-
+      name: servicebus
+      key: connectionString
