Switch to secret for secretstore URL

--- a/iac/dapr/pets.yaml
+++ b/iac/dapr/pets.yaml
@@ -7,7 +7,9 @@ spec:
   version: v1
   metadata:
   - name: url
-    value: https://petspotr.documents.azure.com:443/
+    secretKeyRef:
+      name: cosmos
+      key: url
   - name: masterKey
     secretKeyRef:
       name: cosmos
