--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,40 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "frontend",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build",
-            "program": "${workspaceFolder}/src/frontend/PetSpotR/bin/Debug/net7.0/PetSpotR.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/src/frontend/PetSpotR",
-            "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
-            }
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
-        },
-        {
-            "type": "python",
-            "request": "launch",
-            "name": "backend with Dapr",
-            "program": "${workspaceFolder}/src/backend/app.py",
-            "console": "integratedTerminal",
-            "preLaunchTask": "daprd-debug-backend",
-            "postDebugTask": "daprd-down-backend"
-        },
-        {
             "name": "frontend with Dapr",
             "type": "coreclr",
             "request": "launch",
@@ -49,18 +15,38 @@
                 "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
             },
             "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "DAPR_HTTP_PORT": "3501",
+                "DAPR_GRPC_PORT": "50001"
             },
             "sourceFileMap": {
                 "/Views": "${workspaceFolder}/Views"
             },
             "postDebugTask": "daprd-down-frontend"
+        },
+        {
+            "name": "backend with Dapr",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/backend/app.py",
+            "console": "integratedTerminal",
+            "preLaunchTask": "daprd-debug-backend",
+            "postDebugTask": "daprd-down-backend",
+            "env": {
+                "DAPR_HTTP_PORT": "3502",
+                "DAPR_GRPC_PORT": "50002"
+            }
         }
     ],
     "compounds": [
         {
             "name": "✅ Debug with Dapr",
-            "configurations": ["backend with Dapr", "frontend with Dapr"]
+            "configurations": ["backend with Dapr", "frontend with Dapr"],
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1
+            }
         }
     ]
 }
