rootPath required for Linux

--- a/iac/dapr/local/images.yaml
+++ b/iac/dapr/local/images.yaml
@@ -10,5 +10,5 @@ spec:
   #- name: rootPath
   #  value: C:\tmp\images
   ## Linux
-   - name: actorStateStore
-     value: /tmp/images
+   - name: rootPath
+     value: petimages
