--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,14 @@
       // Configure properties specific to VS Code.
       "vscode": {
         "settings": {},
-        "extensions": ["ms-azuretools.vscode-dapr", "ms-dotnettools.csharp", "ms-azuretools.vscode-docker", "ms-python.python", "dunn.redis"]
+        "extensions": [
+			"ms-azuretools.vscode-dapr",
+			"ms-dotnettools.csharp",
+			"ms-azuretools.vscode-docker",
+			"ms-python.python",
+			"dunn.redis",
+			"GitHub.copilot"
+		]
       }
     },
   
