chore: setup the codebase with this script too

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
     // Features to add to the dev container. More info: https://containers.dev/features.
     "features": {
       "ghcr.io/devcontainers/features/python:1": {},
+      "ghcr.io/devcontainers/features/node:1": {},
       "ghcr.io/devcontainers/features/docker-in-docker:2": {}
     },
   
