chore: run playwright tests in ci with running app

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      url:
+        description: URL to test
+        required: false
+        default: http://localhost:5114/
 
 jobs:
   test:
@@ -19,6 +24,17 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+    - name: Cache Playwright Browsers
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/ms-playwright
+        key: ${{ runner.os }}-node-${{ hashFiles('tests/playwright/package.json') }}-${{ hashFiles('tests/playwright/playwright.config.ts') }}
+    - name: Dapr tool installer
+      if: ${{ github.event.inputs.url == 'http://localhost:5114/' }}
+      uses: dapr/setup-dapr@v1
+    - name: Setup app locally
+      if: ${{ github.event.inputs.url == 'http://localhost:5114/' }}
+      run: scripts/setup
     - name: Install dependencies
       run: |
         cd tests/playwright
@@ -28,6 +44,8 @@ jobs:
         cd tests/playwright
         npx playwright install --with-deps
     - name: Run Playwright tests
+      env:
+        TEST_URL: ${{ github.event.inputs.url }}
       run: |
         cd tests/playwright
         npx playwright test
