--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -45,6 +45,11 @@ jobs:
       run: |
         cd tests/playwright
         npx playwright install --with-deps
+    - name: Start app
+      if: ${{ env.TEST_URL == 'http://localhost:5114/' }}
+      run: |
+        scripts/dev &
+        npx wait-on tcp:5114
     - name: Run Playwright tests
       run: |
         cd tests/playwright
